--- a/ollama_ibm_strands.ipynb
+++ b/ollama_ibm_strands.ipynb
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Step‑by‑step calculation (LaTeX)**  \n",
+      "**Step‑by‑step solution (LaTeX)**  \n",
       "\n",
       "1. **Inner sum and product**\n",
       "\n",
@@ -129,53 +129,69 @@
       "   =14554.5 + 27.0880 \\;\\approx\\; 14581.5880 }\n",
       "\\]\n",
       "\n",
-      "6. **Rounded to the nearest integer**\n",
+      "Rounded to the nearest integer:\n",
       "\n",
       "\\[\n",
-      "\\left\\lceil 14581.5880\\rceil = 14582\n",
+      "\\bigl[\\,14581.5880\\,\\bigr]_{\\text{round}} = 14582\n",
       "\\]\n",
       "\n",
-      "7. **Current date (UTC)**  \n",
+      "6. **Current date (UTC)**  \n",
       "\n",
-      "The tool returned `2025-10-07T23:19:08.421590+00:00`.  \n",
-      "Thus, year \\(Y=2025\\) and month \\(M=10\\).\n",
+      "The tool returned  \n",
       "\n",
-      "8. **Product of year and month**\n",
+      "\\[\n",
+      "2025{-}10{-}08\\;T02{:}21{:}55.418568+00{:}00\n",
+      "\\]\n",
+      "\n",
+      "- Year: \\(Y=2025\\)  \n",
+      "- Month: \\(M=10\\)\n",
+      "\n",
+      "7. **Product of year and month**\n",
       "\n",
       "\\[\n",
       "Y \\times M = 2025 \\times 10 = 20250\n",
       "\\]\n",
       "\n",
-      "9. **Subtract the rounded result (step 6)**  \n",
+      "8. **Subtract the rounded first result**\n",
       "\n",
       "\\[\n",
-      "\\boxed{\\displaystyle Y\\times M - \\bigl(\\text{rounded expression}\\bigr)\n",
-      "   = 20250 - 14582 = 5668 }\n",
+      "20250 - 14582 = \\boxed{567\\,?}\n",
+      "\\]\n",
+      "\n",
+      "Actually:\n",
+      "\n",
+      "\\[\n",
+      "20250 - 14582 = 5668\n",
+      "\\]\n",
+      "\n",
+      "So the final answer is  \n",
+      "\n",
+      "\\[\n",
+      "\\boxed{5668}\n",
       "\\]\n",
       "\n",
       "---\n",
       "\n",
-      "### Summary\n",
+      "**Summary of calculations (LaTeX)**\n",
       "\n",
-      "- The evaluated expression  \n",
-      "  \\[\n",
-      "  \\frac{313(451+293)}{4^{2}}+\\sqrt{734}\n",
-      "  \\]\n",
-      "  equals **≈ 14581.5880**, which rounds to **14582**.\n",
-      "\n",
-      "- Using the current year (2025) and month (10), their product is **20250**.\n",
-      "\n",
-      "- Subtracting the rounded expression gives  \n",
-      "\n",
-      "\\[\n",
-      "20250 - 14582 = \\boxed{5668}.\n",
-      "\\]"
+      "\\begin{align*}\n",
+      "451 + 293 &= 744\\\\[4pt]\n",
+      "313 \\times 744 &= 232872\\\\[4pt]\n",
+      "\\frac{232872}{16} &= 14554.5 \\\\[4pt]\n",
+      "\\sqrt{734} &\\approx 27.0880 \\\\[6pt]\n",
+      "\\text{First expression: } \n",
+      "&\\frac{313(451+293)}{4^{2}}+\\sqrt{734}\n",
+      "   \\;\\approx\\; 14581.5880\\\\[4pt]\n",
+      "\\lfloor 14581.5880 +0.5\\rfloor &= 14582 \\\\[6pt]\n",
+      "2025 \\times 10 &= 20250 \\\\[4pt]\n",
+      "20250 - 14582 &= \\boxed{5668}\n",
+      "\\end{align*}"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "**Step‑by‑step calculation (LaTeX)**  \n",
+       "**Step‑by‑step solution (LaTeX)**  \n",
        "\n",
        "1. **Inner sum and product**\n",
        "\n",
@@ -208,47 +224,63 @@
        "   =14554.5 + 27.0880 \\;\\approx\\; 14581.5880 }\n",
        "\\]\n",
        "\n",
-       "6. **Rounded to the nearest integer**\n",
+       "Rounded to the nearest integer:\n",
        "\n",
        "\\[\n",
-       "\\left\\lceil 14581.5880\\rceil = 14582\n",
+       "\\bigl[\\,14581.5880\\,\\bigr]_{\\text{round}} = 14582\n",
        "\\]\n",
        "\n",
-       "7. **Current date (UTC)**  \n",
+       "6. **Current date (UTC)**  \n",
        "\n",
-       "The tool returned `2025-10-07T23:19:08.421590+00:00`.  \n",
-       "Thus, year \\(Y=2025\\) and month \\(M=10\\).\n",
+       "The tool returned  \n",
        "\n",
-       "8. **Product of year and month**\n",
+       "\\[\n",
+       "2025{-}10{-}08\\;T02{:}21{:}55.418568+00{:}00\n",
+       "\\]\n",
+       "\n",
+       "- Year: \\(Y=2025\\)  \n",
+       "- Month: \\(M=10\\)\n",
+       "\n",
+       "7. **Product of year and month**\n",
        "\n",
        "\\[\n",
        "Y \\times M = 2025 \\times 10 = 20250\n",
        "\\]\n",
        "\n",
-       "9. **Subtract the rounded result (step 6)**  \n",
+       "8. **Subtract the rounded first result**\n",
        "\n",
        "\\[\n",
-       "\\boxed{\\displaystyle Y\\times M - \\bigl(\\text{rounded expression}\\bigr)\n",
-       "   = 20250 - 14582 = 5668 }\n",
+       "20250 - 14582 = \\boxed{567\\,?}\n",
+       "\\]\n",
+       "\n",
+       "Actually:\n",
+       "\n",
+       "\\[\n",
+       "20250 - 14582 = 5668\n",
+       "\\]\n",
+       "\n",
+       "So the final answer is  \n",
+       "\n",
+       "\\[\n",
+       "\\boxed{5668}\n",
        "\\]\n",
        "\n",
        "---\n",
        "\n",
-       "### Summary\n",
+       "**Summary of calculations (LaTeX)**\n",
        "\n",
-       "- The evaluated expression  \n",
-       "  \\[\n",
-       "  \\frac{313(451+293)}{4^{2}}+\\sqrt{734}\n",
-       "  \\]\n",
-       "  equals **≈ 14581.5880**, which rounds to **14582**.\n",
-       "\n",
-       "- Using the current year (2025) and month (10), their product is **20250**.\n",
-       "\n",
-       "- Subtracting the rounded expression gives  \n",
-       "\n",
-       "\\[\n",
-       "20250 - 14582 = \\boxed{5668}.\n",
-       "\\]"
+       "\\begin{align*}\n",
+       "451 + 293 &= 744\\\\[4pt]\n",
+       "313 \\times 744 &= 232872\\\\[4pt]\n",
+       "\\frac{232872}{16} &= 14554.5 \\\\[4pt]\n",
+       "\\sqrt{734} &\\approx 27.0880 \\\\[6pt]\n",
+       "\\text{First expression: } \n",
+       "&\\frac{313(451+293)}{4^{2}}+\\sqrt{734}\n",
+       "   \\;\\approx\\; 14581.5880\\\\[4pt]\n",
+       "\\lfloor 14581.5880 +0.5\\rfloor &= 14582 \\\\[6pt]\n",
+       "2025 \\times 10 &= 20250 \\\\[4pt]\n",
+       "20250 - 14582 &= \\boxed{5668}\n",
+       "\\end{align*}"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -308,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "solution-agent",
+   "display_name": "strands-ollama-ibm",
    "language": "python",
    "name": "python3"
   },
